<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/curve_shape">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/congratulation"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:text="@string/congratulation"
        android:textColor="@color/text_color"
        android:fontFamily="@font/dimbo"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/you_have_earned_a_token"
        android:textColor="@color/text_color"
        android:fontFamily="@font/dimbo"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/deal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:fontFamily="@font/dimbo"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape_simple"
        android:text="@string/redeem_token"
        android:textColor="@color/text_color"
        android:fontFamily="@font/dimbo"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:id="@+id/redeem"/>



</LinearLayout>